--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>apMangle</title>
     <link rel="stylesheet" href="/lib/bootstrap/dist/css/bootstrap.min.css">
-    <link rel='stylesheet' href='/mangle.css' />
+    <link rel='stylesheet' href='/stylesheets/mangle.css' />
 
     <script src="/lib/angular/angular.js"></script>
     <script src="/lib/angular-route/angular-route.js"></script>
