Added namespace example

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <script src="/lib/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 
     <script src="/lib/apMangle/Mangle.js"></script>
+    <script src="/lib/apMangle/apNamespace.js"></script>
     <script src="/lib/apMangle/apTransient.js"></script>
 
     <script src="/app/MangleApp.js"></script>
@@ -20,6 +21,8 @@
     <script src="/transient/counterCtrl2.js"></script>
     <script src="/transient/counterCtrl3.js"></script>
     <script src="/transient/counterCtrl4.js"></script>
+    <script src="/namespace/stoogeStudioServices.js"></script>
+    <script src="/namespace/stoogeStudioControllers.js"></script>
   </head>
   <body ng-app="apMangleApp">
 
